tests/baselines/reference/commentsWhitespace.js

// test
var f = ''
// test #2

var foo;
(function (foo) {
    function bar() {
    }
})(foo || (foo = {}));
// test #3


// test #4
var hello = (function () {
    function hello() {
    }
    return hello;
})();
// test #5

var test = '';

/* test #6 */;
 // test #7

// operator >
var test2 = '';
function bar(t, u, v) {
    // errors
    var r;
}; // error

var val = 5;
 /// <reference path="bar" .../>
/*! e pin */
 // c
function f42(i) { // f
    var args = [];
    for (var _i = 1; _i < arguments.length; _i++) {
        args[_i - 1] = arguments[_i];
    }
    var foo; // g
}
var h = 1; // h
var j = 2;
